[tool.poetry]
name = "sir-soins"
version = "0.1.0"
description = "A simple discord bot for keeping track of your tasks."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.0"
python-dotenv = "^0.15.0"
flask = "^1.1.2"
pymongo = "^3.11.2"
dnspython = "^2.0.0"
discord-timers = "^0.1.0"
PyNaCl = "^1.4.0"
youtube-dl = "^2021.5.16"

[tool.poetry.dev-dependencies]

[tool.black]
line-length=120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
